# Mos2Intel

./: .gitmodules  Mos6502.sln  README
EasyMosToX86/: EasyMosToX86.csproj  Program.cs  runtime_easy.c
Mos6502/: Extensions.cs  IllegalInstructionException.cs  Mos6502SR.cs  MosAddressingMode.cs  MosInstruction.cs  MosOpcode.cs
Mos6502.Test/: AssemblerTests.cs  DisassemblerTests.cs  Mos6502.Test.csproj
Mos6502Assembler/: Assembler.cs  Encoder.cs  Program.cs
Mos6502Disassembler/: Mos6502Disassembler.csproj  MosDisassembler.cs  Program.cs
Mos6502Emulator/: Mos6502Cpu.cs  Mos6502Emulator.csproj  MosRuntimeException.cs  Program.cs
Mos6502Emulator.Easy/: App.axaml  App.axaml.cs  EasyMos.axaml  EasyMos.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Mos6502Emulator.Easy.csproj  Program.cs
Mos6502Emulator.Test/: EmulatorTestBase.cs  EmulatorTests.cs  Mos6502Emulator.Test.csproj  MosFunctionalTest.cs  MosNesTest.cs  TestJumps.cs  TestLoads.cs  TestQuirks.cs  TestStack.cs  TestStores.cs  TestSubtract.cs  TestTransfers.cs  TestsADC.cs  TestsAND.cs  TestsASL.cs  TestsBranches.cs  TestsCompare.cs  TestsDecrement.cs  TestsEor.cs  TestsIncrement.cs  TestsOra.cs  TestsSetFlags.cs  TestsShifts.cs
MosToX86Converter.Test/: FlagsComparison.cs  LoadStoreTests.cs  MosToX86Converter.Test.csproj  PerformanceTest.cs  RealWorldTest.cs  TestBase.cs  TestCycling.cs  (+19 more)
NesConverter/runtime/: CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  IMemory.h  Joystick.cpp  Joystick.h  NesBus.cpp  NesBus.h  PPU.h  PictureBus.cpp  PictureBus.h  SimplePPU.cpp  SimplePPU.h  main.cpp
(+25 files in other folders)
